# clubhouse-api

./: Cargo.toml  README.md  api.toml
examples/: get_story.rs
src/: delete.rs  get.rs  lib.rs  parser.rs  post.rs  put.rs  types.rs  urls.rs
src/delete/: categories.rs  epics.rs  files.rs  labels.rs  linked_files.rs  milestones.rs  projects.rs  stories.rs  story_links.rs
src/delete/categories/: category_public_id.rs
src/delete/epics/: epic_public_id.rs
src/delete/files/: file_public_id.rs
src/delete/labels/: label_public_id.rs
src/delete/linked_files/: linked_file_public_id.rs
src/delete/milestones/: milestone_public_id.rs
src/delete/projects/: project_public_id.rs
src/delete/stories/: bulk.rs  story_public_id.rs
src/delete/story_links/: story_link_public_id.rs
src/get/: categories.rs  epic_workflow.rs  epics.rs  files.rs  labels.rs  linked_files.rs  members.rs  milestones.rs  projects.rs  repositories.rs  search.rs  stories.rs  story_links.rs  teams.rs  workflows.rs
src/get/categories/: category_public_id.rs
src/get/epics/: epic_public_id.rs
src/get/files/: file_public_id.rs
src/get/labels/: label_public_id.rs
src/get/linked_files/: linked_file_public_id.rs
src/get/members/: member_public_id.rs
src/get/milestones/: milestone_public_id.rs
src/get/projects/: project_public_id.rs
src/post/: categories.rs  epics.rs  files.rs  labels.rs  linked_files.rs  milestones.rs  projects.rs  stories.rs  story_links.rs
src/put/: categories.rs  epics.rs  files.rs  labels.rs  linked_files.rs  milestones.rs  projects.rs  stories.rs
(+40 files in other folders)
